# light-flow-editor

./: CMakeLists.txt  README.md
other/: format.sh
resources/: lightfloweditor
snap/: snapcraft.yaml
src/: index.html  main.cpp  main_sphere_tracing.cpp  util.hpp
src/editor/: Blueprint.hpp  Board.cpp  Board.hpp  Connector.cpp  Connector.hpp  Node.cpp  Node.hpp  Resource.cpp  Resource.hpp  Shape.cpp  Shape.hpp  Slot.cpp  Slot.hpp
src/node/: color.ipp  complement.ipp  cube.ipp  difference.ipp  intersection.ipp  new_vec3.ipp  number.ipp  repeat.ipp  scale.ipp  screen.ipp  slider.ipp  smoothed_union.ipp  sphere.ipp  time.ipp  torus.ipp  translate.ipp  union.ipp
src/node/combine/: complement.ipp  difference.ipp  intersection.ipp  smooth_difference.ipp  smooth_intersection.ipp  smooth_union.ipp  union.ipp
src/node/math/: operations.ipp  sin.ipp  trigonometry.ipp
src/node/primitive/: capsule.ipp  cube.ipp  sphere.ipp  torus.ipp
src/node/transform/: color.ipp  repeat.ipp  rotate.ipp  scale.ipp  translate.ipp
src/widget/: RenderWidget.cpp  RenderWidget.hpp
